<resources>
    <string name="app_name">ExamsAdda</string>

    <string name="signin_button_text">Sign in</string>
    <string name="signup_button_text">Sign up</string>
    <string name="welcome_message">Exams Practice Papers on Mobile in Regional Language</string>
    <string name="title_activity_user_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="title_activity_user_home">Home Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_home">Home</string>

    <string name="view_registered_exams">Registered Exams</string>
    <string name="change_password">Change Password</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="suggestion">Suggestions</string>
    <string name="feedback">Feedback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Exams</item>
        <item>Change Password</item>
        <item>Refer a Friend</item>
        <item>Suggestions</item>
        <item>Feedback</item>
    </string-array>
    <string name="title_activity_registered_exams_list">Available Exams 4 U</string>
    <string name="title_activity_add_exam">AddExamActivity</string>

</resources>
